--- a/static/index.html
+++ b/static/index.html
@@ -67,7 +67,8 @@
 
 <script>
 // 從後端獲取卡片資料
-const url="http://localhost:5500/cards";
+//const url="http://localhost:5500/cards"; (Local)
+const url="https://redb.fly.dev/cards"; //(PRD)
 
 // GET(SELECT)
 // 簡單方法
